# africastalking-eris-devkit-playground

./: .gitignore  README.md  SUMMARY.md  demo.md  untitled.md
.github/workflows/: arduino.yml
arduino/: 74hc595-shift-register.md  arduino-on-africastalking-eris-devkit.md  arduino.md  dht11.md  hc-sr04-ultrasonic-sensor.md  light-dependent-resistor.md  servo-motor.md  soil-moisture-sensor.md  solid-state-relay.md
bare-metal/: bare-metal-on-africastalking-eris-devkit.md  baremetal-on-africastalking-eris-devkit.md
introduction/: untitled.md
projects/: untitled-1.md  untitled.md
rust/: rust-on-africastalking-eris-devkit.md
src/: baremetal.md  rust.md
src/10Ultrasonic/: README.md
src/10Ultrasonic/01bare_bones/: 01bare_bones.ino
src/11Servo/: README.md
src/11Servo/01rotate/: 01rotate.ino
src/12Relay/: README.md
src/14Shiftregister/: README.md
src/15Microsd/: README.md
src/1OnboardLED/1turningon/: 1turningon.ino
src/1OnboardLED/3blinkingdifferentrates/: 3blinkingdifferentrates.ino
src/2BreadboardLED/: 7analog_writing_voltages_gradually_light_led.fzz  loopblinking.fzz
src/5Potentiometer/: dimmingled.fzz  potentiometer.fzz
src/7DHT11/: README.md
src/8LDR/: README.md
src/9MoistureSensor/: README.md  moisturesensor.fzz
src/Arduino/: README.md
src/BareMetal/: README.md
src/Rust/: README.md
src/Rust/2BlinkingBreadboardLed/: Cargo.toml  Makefile
src/Rust/2BlinkingBreadboardLed/src/: main.rs
src/arduino/: 10ultrasonic.md  11servo.md  12relay.md  14shiftregister.md  15microsd.md  7dht11.md  8ldr.md  9moisturesensor.md  README.md
(+52 files in other folders)
